cmake_minimum_required(VERSION 3.5)
project(Flex-Bison-Example)

add_subdirectory(elite2)
add_subdirectory(reentrant-variant-cpp)
add_subdirectory(reentrant-c)
add_subdirectory(simple-cpp)
add_subdirectory(simple-c)
add_subdirectory(utf8)
add_subdirectory(error-recovery)
add_subdirectory(optional-semicolon)
add_subdirectory(python-like-indentation)

